add simple html elements, basic css, and element references

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div>
+      <h1>Rock Paper Scissors</h1>
+      <h3 id="result-display"></h3>
+    </div>
+    <div id="rps">
+			<button id="rock">🪨</button>
+      <button id="paper">📄</button>
+      <button id="scissors">✂️</button>
+    </div>
+  </div>
 </body>
 </html>
